--- a/README.html
+++ b/README.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en-US">
 <body>
+   <meta name="viewport" content="width=device-width, initial-scale=1.0">
    <h1>
     Ms.Palmer's Engineering Class
    </h1>
