--- a/README.html
+++ b/README.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en-US">
-<bodystyle= "background-color:grey;" >
+<bodystyle= "background-color:lightblue;" >
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
    <h1 style="color:eggshell;text-align:center;">
     Ms.Palmer's Engineering Class
