--- a/README.html
+++ b/README.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html lang="en-US">
-<bodystyle= "background-color:lightblue;" >
+<body style= "background-color:lightblue;" >
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
    <h1 style="color:eggshell;text-align:center;">
     Ms.Palmer's Engineering Class
    </h1>
-   <h2>8th grade class at EMS</h2>
+   <h2 "text-align:center;">8th grade class at EMS</h2>
 </body>
 </html>
