--- a/README.html
+++ b/README.html
@@ -3,7 +3,7 @@
 <style>
 <body background-color:rgb(0,232,15); >
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-   <h1 style="color:eggshell;text-align:center;">
+   <h1 color:eggshell; "text-align:center;">
     Ms.Palmer's Engineering Class
    </h1>
    <h2 "text-align:center;">8th grade class at EMS</h2>
