--- a/README.html
+++ b/README.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html lang="en-US">
 <style>
-<body background-color:rgb(0,232,15); >
+<body background-color:lightblue; >
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-   <h1 color:rgb(0, 10, 45); "text-align:center;">
+   <h1 color:eggshell; "text-align:center;">
     Ms.Palmer's Engineering Class
    </h1>
    <h2 "text-align:center;">8th grade class at EMS</h2>
