--- a/README.html
+++ b/README.html
@@ -3,10 +3,10 @@
 <style>
 <body background-color:lightblue; >
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-   <h1 color:eggshell; "text-align:center;">
+   <h1  "text-align:center;">
     Ms.Palmer's Engineering Class
    </h1>
-   <h2 "text-align:center;">8th grade class at EMS</h2>
+   <h2 >8th grade class at EMS</h2>
 </body>
 </style>
 </html>
