--- a/README.html
+++ b/README.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="en-US">
-<body>
+<body style= "background-color:lightseagreen;">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-   <h1  "text-align:center;"> Ms.Palmer's Engineering Class</h1>
+   <h1 style="color:seashell;text-align:center;"> Ms.Palmer's Engineering Class</h1>
    <h2>8th grade class at EMS</h2>
    <p>Hello, and welcome to Mrs. Palmer's Design class homepage.</p>
 </body>
