--- a/README.html
+++ b/README.html
@@ -2,7 +2,10 @@
 <html lang="en-US">
 <body style= "background-color:lightseagreen;">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-   <h1 style= "color:seashell;text-align:center;"> Ms.Palmer's Engineering Class</h1>
+   p.sansserif {
+    font-family: Arial, Helvetica, sans-serif;
+}
+   <h1  class="serif" style= "color:seashell;text-align:center;"> Ms.Palmer's Engineering Class</h1>
    <h2 style= "color:saddlebrown;text-align:center">8th grade class at EMS</h2>
    <p>Hello, and welcome to Mrs. Palmer's Design class homepage.</p>
 </body>
