--- a/README.html
+++ b/README.html
@@ -5,5 +5,10 @@
    <h1  class="serif" style= "color:seashell;text-align:center;"> Ms.Palmer's Engineering Class</h1>
    <h2 style= "color:saddlebrown;text-align:center">8th grade class at EMS</h2>
    <p>Hello, and welcome to Mrs. Palmer's Design class homepage.</p>
+   <h3 style="text-align:center;">Team Members:</h3>
+    <ul style="text-align:center;">
+    <li style="text-align:center;">Emma</li>
+    <li style="text-align:center;">Gabe </li>
+  </ul>
 </body>
 </html>
