--- a/README.html
+++ b/README.html
@@ -9,6 +9,10 @@
     <ul style="text-align:center;">
     <li style="text-align:center;">Emma</li>
     <li style="text-align:center;">Gabe </li>
+    <li style="text-align:center;"> Grady</li>
+    <li style="text-align:center;"> Austin </li>
+    <li style="text-align:center;">Logan</li>
+    <li style="text-align:center;">Jaylen </li>
   </ul>
 </body>
 </html>
