--- a/README.html
+++ b/README.html
@@ -14,5 +14,6 @@
     <li style="text-align:center;">Jaylen </li>
   </ul>
     <p>Hello, and welcome to Mrs. Palmer's Design class homepage.</p>
+   <p> This website was created for a class project. This took hours of frustration filled team work.</p>
 </body>
 </html>
