--- a/README.html
+++ b/README.html
@@ -15,6 +15,6 @@
   </ul>
     <p>Hello, and welcome to Mrs. Palmer's Design class homepage.</p>
    <p> This website was created for a class project. This took hours of frustration filled team work.</p>
-    <button type="button" onclick="alert('We are super smart')">Click Me!</button>
+    <button type="button" onclick="alert('Kids, watch out for click bait, JK, LOL')">Click Me!</button>
 </body>
 </html>
