--- a/README.html
+++ b/README.html
@@ -2,7 +2,7 @@
 <html lang="en-US">
 <body style= "background-color:lightseagreen;">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-   <img src="./design.jpg" alt="Design Process" style="device-width;height:100px;">
+   <img src="./design.jpeg" alt="Design Process" style="device-width;height:100px;">
    <h1  class="serif" style= "color:seashell;text-align:center;"> Ms.Palmer's Engineering Class</h1>
    <h2 style= "color:saddlebrown;text-align:center">8th grade class at EMS</h2>
    <h3 style="text-align:center;">Team Members:</h3>
